--- a/src/assets/styles/contactbanner.module.css
+++ b/src/assets/styles/contactbanner.module.css
@@ -29,6 +29,11 @@
   transform: scale(1.05);
 }
 
+.innerContactStrip {
+  display: flex;
+  gap: 70px;
+}
+
 .contactStrip {
   display: flex;
   justify-content: center;
@@ -138,14 +143,19 @@
     margin-top: 40px;
   }
 
-  .innerContactStrip {}
+  .innerContactStrip {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0;
+    padding-bottom: 30px;
+  }
 
   .contactPill {
     /* flex-direction: column; */
     /* Center pill content */
     /* text-align: center; */
-    align-items: flex-start;
-    margin: 20px 0;
+    align-items: center;
+    margin: 10px 0;
   }
 
   .pillText {
