--- a/src/assets/styles/contactsection.module.css
+++ b/src/assets/styles/contactsection.module.css
@@ -320,6 +320,7 @@ textarea {
 
     .processList {
         width: 100%;
+        margin-bottom: 0;
     }
 
     .processItem {
