--- a/src/assets/styles/ctabanner.module.css
+++ b/src/assets/styles/ctabanner.module.css
@@ -17,11 +17,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 30%;
+  text-align: center;
 }
 
 .title {
   color: #ffffff;
-  font-size: 2.5rem;
+  font-size: 3em;
   font-weight: var(--weight-semibold);
   line-height: 1.2;
   margin-bottom: 2rem;
@@ -66,5 +68,11 @@
     margin-bottom: 1rem;
   }
 
-  .ctaButton {}
+  .content {
+    width: 100%;
+  }
+
+  .ctaButton {
+    font-size: 1.3rem;
+  }
 }
